remove some polymorph debug logs